--- a/Spreadsheet/Spreadsheet/Spreadsheet.csproj
+++ b/Spreadsheet/Spreadsheet/Spreadsheet.csproj
@@ -43,8 +43,13 @@
   <ItemGroup>
     <Compile Include="AbstractSpreadsheet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Spreadsheet.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DependencyGraphTestCases\DependencyGraphTestCases.csproj">
+      <Project>{d65d3385-4727-4c96-ba88-fb108568b5af}</Project>
+      <Name>DependencyGraphTestCases</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DependencyGraph\DependencyGraph.csproj">
       <Project>{862ead85-346f-4d2b-a53c-98074ff813ba}</Project>
       <Name>DependencyGraph</Name>
