--- a/Spreadsheet/PS6GradingTests/PS6GradingTests.csproj
+++ b/Spreadsheet/PS6GradingTests/PS6GradingTests.csproj
@@ -62,6 +62,30 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DependencyGraphTestCases\DependencyGraphTestCases.csproj">
+      <Project>{d65d3385-4727-4c96-ba88-fb108568b5af}</Project>
+      <Name>DependencyGraphTestCases</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DependencyGraph\DependencyGraph.csproj">
+      <Project>{862ead85-346f-4d2b-a53c-98074ff813ba}</Project>
+      <Name>DependencyGraph</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FormulaSimpleTests\FormulaSimpleTests.csproj">
+      <Project>{707dfaa0-3bb3-4896-af50-0a4d6d580d06}</Project>
+      <Name>FormulaSimpleTests</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Formula\Formula.csproj">
+      <Project>{d43d998c-9797-4cf4-9bb0-6de22753849a}</Project>
+      <Name>Formula</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PS2GradingTests\PS2GradingTests.csproj">
+      <Project>{5f69302b-df29-42d2-bfe2-4a168ff4f588}</Project>
+      <Name>PS2GradingTests</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SpreadsheetTests\SpreadsheetTests.csproj">
+      <Project>{96f72cb0-d84e-4d3d-9df8-697c2be4f984}</Project>
+      <Name>SpreadsheetTests</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Spreadsheet\Spreadsheet.csproj">
       <Project>{9025a594-df2a-4e6a-b8c2-f087ecc3e203}</Project>
       <Name>Spreadsheet</Name>
