--- a/Spreadsheet/SpreadsheetGUIVersion2/SpreadsheetGUIVersion2.csproj
+++ b/Spreadsheet/SpreadsheetGUIVersion2/SpreadsheetGUIVersion2.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Context.cs" />
     <Compile Include="SS.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -53,7 +54,6 @@
     </Compile>
     <Compile Include="Launch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SpreadsheetContext.cs" />
     <Compile Include="SpreadsheetControllers.cs" />
     <Compile Include="SpreadsheetView.cs" />
     <EmbeddedResource Include="SS.resx">
