--- a/Spreadsheet/SpreadsheetUnitTest/SpreadsheetUnitTest.csproj
+++ b/Spreadsheet/SpreadsheetUnitTest/SpreadsheetUnitTest.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{96F72CB0-D84E-4D3D-9DF8-697C2BE4F984}</ProjectGuid>
+    <ProjectGuid>{95F51204-4A64-4798-AD0B-A44A68DD42C5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SpreadsheetTests</RootNamespace>
-    <AssemblyName>SpreadsheetTests</AssemblyName>
+    <RootNamespace>SpreadsheetUnitTest</RootNamespace>
+    <AssemblyName>SpreadsheetUnitTest</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -46,9 +46,11 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TestingSpreadsheet.cs" />
+    <Compile Include="ControllerStub.cs" />
+    <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -59,29 +61,13 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DependencyGraphTestCases\DependencyGraphTestCases.csproj">
-      <Project>{d65d3385-4727-4c96-ba88-fb108568b5af}</Project>
-      <Name>DependencyGraphTestCases</Name>
+    <ProjectReference Include="..\SpreadsheetGUIVersion2\SpreadsheetGUI.csproj">
+      <Project>{fc40c4d5-0c6a-442f-91cc-02293f963418}</Project>
+      <Name>SpreadsheetGUI</Name>
     </ProjectReference>
-    <ProjectReference Include="..\DependencyGraph\DependencyGraph.csproj">
-      <Project>{862ead85-346f-4d2b-a53c-98074ff813ba}</Project>
-      <Name>DependencyGraph</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\FormulaSimpleTests\FormulaSimpleTests.csproj">
-      <Project>{707dfaa0-3bb3-4896-af50-0a4d6d580d06}</Project>
-      <Name>FormulaSimpleTests</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Formula\Formula.csproj">
-      <Project>{d43d998c-9797-4cf4-9bb0-6de22753849a}</Project>
-      <Name>Formula</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\PS2GradingTests\PS2GradingTests.csproj">
-      <Project>{5f69302b-df29-42d2-bfe2-4a168ff4f588}</Project>
-      <Name>PS2GradingTests</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Spreadsheet\Spreadsheet.csproj">
-      <Project>{9025a594-df2a-4e6a-b8c2-f087ecc3e203}</Project>
-      <Name>Spreadsheet</Name>
+    <ProjectReference Include="..\SpreadsheetPanel\SpreadsheetPanel.csproj">
+      <Project>{F31299DC-288F-4E46-A3AF-6BF461B21C79}</Project>
+      <Name>SpreadsheetPanel</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
